fix: LNISYS size on mobile

--- a/assets/css/partials/_slider.sass
+++ b/assets/css/partials/_slider.sass
@@ -44,7 +44,7 @@
 .slideshow-4
     @extend %slideshow
     background-image: url('../../assets/images/ALYSSIALOU_20-2.jpg')
-    background-size: 40%
+    background-size: 50%
     background-repeat: repeat
     z-index: 5
 
