--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,7 +399,7 @@ article {
 
 .slideshow-4 {
   background-image: url("../../assets/images/ALYSSIALOU_20-2.jpg");
-  background-size: 40%;
+  background-size: 50%;
   background-repeat: repeat;
   z-index: 5;
 }
